@@ -3,6 +3,8 @@
 
 Version 8.0.24
 
+  - Fix for Bug#99708 (31510398), mysql-connector-java 8.0.20 ASSERTION FAILED: Unknown message type: 57 s.close.
+
   - Fix for Bug#32122553, EXTRA BYTE IN COM_STMT_EXECUTE.
 
   - Fix for Bug#101558 (32141210), NULLPOINTEREXCEPTION WHEN EXECUTING INVALID QUERY WITH USEUSAGEADVISOR ENABLED.
